# hope-doc-jarvis

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.ai/: architecture.md  safety.md  standards.md  testing-patterns.md  workflow.md
.github/: AGENTS.md  file-filters.yml
.github/workflows/: dockerize.yml  docs.yml  labelize.yml  lint.yml  lock_issues.yml  test.yml
docker/: Dockerfile
docker/app/: chainlit.md  start.sh
docker/app/.chainlit/: config.toml
docker/app/.chainlit/translations/: ar-SA.json  bn.json  da-DK.json  (+20 more)
docker/app/config/: repos.yaml  sync_state.json
docker/app/public/: theme.json
docs/: architecture.md  configuration.md  getting-started.md  index.md  webhook.md
docs/commands/: check.md  db.md  index.md  info.md  update.md
src/hope_jarvis/: app.py  config.py  core.py  knowledge.py  webhook.py
src/hope_jarvis/cli/: __init__.py  db.py  doc.py  kb.py  repo.py  run.py
src/hope_jarvis/ingestion/: __init__.py  chunker.py  store.py  sync.py
src/hope_jarvis/prompts/: ecosystem.md  persona.md  response_rules.md
src/hope_jarvis/query/: __init__.py  generate.py  retrieve.py
src/hope_jarvis/utils/: __init__.py  url_mapper.py
tests/: .coveragerc  test_app.py  test_cli.py  test_cli_db.py  test_cli_init.py  test_cli_kb.py  test_cli_repo.py  test_cli_run.py  test_config.py  test_core.py  test_generate.py  test_ingestion.py  test_knowledge.py  test_query.py  test_retrieve.py  test_store.py  test_sync.py  test_url_mapper.py  test_webhook.py
(+3 files in other folders)
